--- a/views/ShowAll.ejs
+++ b/views/ShowAll.ejs
@@ -16,8 +16,8 @@
     <div class="container">
       <% Tasks.forEach(ele => { %>
         <div class="card">
-            <h3><%=ele.subject%></h3>
-            <p><%=ele.title%></p>
+            <h2 style="text-align: center;margin-bottom: 10px;"><%=ele.subject%></h2>
+            <p style="text-align: center;"><%=ele.title%></p>
             <div class="btn">
             <a href="/EditeTask/<%= ele.id %>" class="btn">Edit</a>
             <form action="Delete" method="post">
